--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="format-detection" content="telephone=no" />
+
+    <meta name="mobile-web-app-capable" content="yes">
     
     <!-- Geo Tags -->
     <meta name="geo.region" content="NG-LA" />
