--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     
     <!-- Primary Meta Tags -->
-    <title>HighScore Tech - Premier Software Development, iGaming Solutions & Tech Training Academy</title>
+    <title>HighScore Tech | Premier Software Development & Tech Training Academy</title>
     <meta name="title" content="HighScore Tech - Premier Software Development, iGaming Solutions & Tech Training Academy" />
     <meta name="description" content="HighScore Tech specializes in cutting-edge software development including iGaming platforms (Crash Games, Slots, Blackjack, Plinko, Mines, Dice), crypto exchanges, AI-powered applications, mobile apps, e-commerce solutions. We also train aspiring developers and provide hands-on internships for real-world experience." />
-    <meta name="keywords" content="software development, iGaming, crash game development, crypto exchange, blockchain development, AI platforms, machine learning, mobile app development, web development, e-commerce solutions, tech training, coding bootcamp, software internships, provably fair games, casino games, slots development, blackjack, plinko, mines game, dice games, lottery systems, keno, wheel games, limbo, hilo games, wallet integration, Nigeria tech company, Lagos software development" />
+    <meta name="keywords" content="HighScore Tech, HighScore, high score tech, highscore technology, software development company Nigeria, premier tech company Lagos, iGaming development, crash game development, crypto exchange platform, blockchain development Nigeria, AI platforms Nigeria, machine learning solutions, mobile app development Lagos, web development Nigeria, e-commerce solutions, tech training Nigeria, coding bootcamp Lagos, software internships Nigeria, provably fair games, casino games development, slots development, blackjack development, plinko games, mines game, dice games, lottery systems, keno development, wheel games, limbo games, hilo games, wallet integration, Nigeria tech leader, Lagos software company, technology education Nigeria, developer training Lagos" />
     <meta name="author" content="HighScore Tech" />
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
     <meta name="language" content="English" />
@@ -23,8 +23,8 @@
     <meta property="og:url" content="https://www.highzcore.tech/" />
     <meta property="og:title" content="HighScore Tech - Premier Software Development, iGaming Solutions & Tech Training Academy" />
     <meta property="og:description" content="HighScore Tech specializes in cutting-edge software development including iGaming platforms (Crash Games, Slots, Blackjack, Plinko, Mines, Dice), crypto exchanges, AI-powered applications, mobile apps, e-commerce solutions. We also train aspiring developers and provide hands-on internships for real-world experience." />
-    <meta property="og:image" content="https://www.highzcore.tech/assets/full-logo.png" />
-    <meta property="og:image:secure_url" content="https://www.highzcore.tech/assets/full-logo.png" />
+    <meta property="og:image" content="https://www.highzcore.tech/assets/short-logo.png" />
+    <meta property="og:image:secure_url" content="https://www.highzcore.tech/assets/short-logo.png" />
     <meta property="og:image:alt" content="HighScore Tech Logo - Premier Software Development Company" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -36,7 +36,7 @@
     <meta property="twitter:url" content="https://www.highzcore.tech/" />
     <meta property="twitter:title" content="HighScore Tech - Premier Software Development, iGaming Solutions & Tech Training Academy" />
     <meta property="twitter:description" content="HighScore Tech specializes in cutting-edge software development including iGaming platforms (Crash Games, Slots, Blackjack, Plinko, Mines, Dice), crypto exchanges, AI-powered applications, mobile apps, e-commerce solutions. We also train aspiring developers and provide hands-on internships for real-world experience." />
-    <meta property="twitter:image" content="https://www.highzcore.tech/assets/full-logo.png" />
+    <meta property="twitter:image" content="https://www.highzcore.tech/assets/short-logo.png" />
     <meta property="twitter:image:alt" content="HighScore Tech Logo - Premier Software Development Company" />
     <meta name="twitter:creator" content="@HighScoretech" />
     <meta name="twitter:site" content="@HighScoretech" />
@@ -86,7 +86,7 @@
       "url": "https://www.highzcore.tech",
       "logo": {
         "@type": "ImageObject",
-        "url": "https://www.highzcore.tech/assets/full-logo.png",
+        "url": "https://www.highzcore.tech/assets/short-logo.png",
         "width": "1200",
         "height": "630",
         "caption": "HighScore Tech Logo"
@@ -94,7 +94,7 @@
       "image": [
         {
           "@type": "ImageObject",
-          "url": "https://www.highzcore.tech/assets/full-logo.png",
+          "url": "https://www.highzcore.tech/assets/short-logo.png",
           "width": "1200",
           "height": "630"
         },
@@ -208,7 +208,7 @@
       "url": "https://www.highzcore.tech/courses",
       "logo": {
         "@type": "ImageObject",
-        "url": "https://www.highzcore.tech/assets/full-logo.png",
+        "url": "https://www.highzcore.tech/assets/short-logo.png",
         "width": "1200",
         "height": "630"
       },
@@ -364,7 +364,7 @@
         "name": "HighScore Tech",
         "logo": {
           "@type": "ImageObject",
-          "url": "https://www.highzcore.tech/assets/full-logo.png",
+          "url": "https://www.highzcore.tech/assets/short-logo.png",
           "width": "1200",
           "height": "630"
         }
@@ -384,12 +384,12 @@
       "@type": "LocalBusiness",
       "name": "HighScore Tech",
       "image": [
-        "https://www.highzcore.tech/assets/full-logo.png",
+        "https://www.highzcore.tech/assets/short-logo.png",
         "https://www.highzcore.tech/assets/short-logo.png"
       ],
       "logo": {
         "@type": "ImageObject",
-        "url": "https://www.highzcore.tech/assets/full-logo.png",
+        "url": "https://www.highzcore.tech/assets/short-logo.png",
         "width": "1200",
         "height": "630"
       },
